<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/unauthenticated">
        <item
            android:id="@+id/signin"
            android:title="@string/sign_in"
            app:showAsAction="never" />
        <item
            android:id="@+id/signup"
            android:title="@string/sign_up"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/authenticated">
        <item
            android:id="@+id/historyOfOrders"
            android:title="@string/history_of_orders"
            app:showAsAction="never" />

        <item
            android:id="@+id/signout"
            android:title="@string/signout"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="never" />
</menu>